--- a/javi/CssJaviHtml.css
+++ b/javi/CssJaviHtml.css
@@ -3,7 +3,7 @@ header{
   background-color: black;
 }
   #logo{
-    width: 15%;
+    width: 10%;
   }
   #titulo{
     margin-left: 45%;
@@ -71,7 +71,49 @@ header{
     padding: 10px;
     width: 420px;
     font-family: 'Indie Flower', cursive;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-left: 10%;
     margin-top: 15%
     }
+    .social {
+      padding: 0;
+position: fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
+margin-left: 0%; /* Establecemos la barra en la izquierda */
+top: 40%; /* Bajamos la barra 250px de arriba a abajo */
+z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
+}
+    .social ul {
+  		list-style: none;
+      margin-left: 0%;
+      padding: 0;
+  	}
+  	.social ul li a {
+      margin-left: 0%;
+  		display: inline-block;
+  		color:#fff;
+  		background: #000;
+  		padding: 15px 15px;
+  		text-decoration: none;
+  		-webkit-transition:all 500ms ease;
+  		-o-transition:all 500ms ease;
+  		transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
+  	}
+  	.social ul li .icon-facebook {background:#3b5998; }
+  	.social ul li .icon-twitter {background: #00abf0; }
+  	.social ul li .icon-googleplus {background: #d95232;}
+  	.social ul li .icon-pinterest {background: #ae181f;}
+  	.social ul li .icon-mail {background: #666666;}
+  	.social ul li a:hover {
+  		background: #000; /* Cambiamos el fondo cuando el usuario pase el mouse */
+  		padding: 10px 30px; /* Hacemos mas grande el espacio cuando el usuario pase el mouse */
+  	}
+    .comentario{
+      margin-top: 300px;
+    }
+/*mensajes Directos*/
+.red{
+    color:red;
+    }
+.mensajesDirectos{
+  margin-top: 300px;
+}
