--- a/javi/CssJaviHtml.css
+++ b/javi/CssJaviHtml.css
@@ -98,8 +98,8 @@ z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga alg√
   		-o-transition:all 500ms ease;
   		transition:all 500ms ease; /* Establecemos una transici√≥n a todas las propiedades */
   	}
-  	.social ul li .icon-facebook {background:#3b5998; }
-  	.social ul li .icon-twitter {background: #00abf0; }
+  	.social ul li .icon-facebook {color:#fff; background:#3b5998; }
+  	.social ul li .icon-twitter {color:#fff; background: #00abf0; }
   	.social ul li .icon-googleplus {background: #d95232;}
   	.social ul li .icon-pinterest {background: #ae181f;}
   	.social ul li .icon-mail {background: #666666;}
