--- a/inicio/cssInicio.css
+++ b/inicio/cssInicio.css
@@ -1,11 +1,16 @@
-*{
+/* *{
   padding:0px;
   margin: 0px;
   box-sizing: border-box;
-}
+} */
 html {
    position: relative;
    min-height: 100%;
+
+ }
+ .container-fluid{
+   width: 100%;
+   padding: 0px;
  }
  body {
    margin-bottom: 30px; /* Margin bottom by footer height */
@@ -31,6 +36,7 @@ header{
   }
   #contenido{
     width: 100%;
+    
   }
       #map{
         height: 240px;
@@ -38,6 +44,8 @@ header{
       }
       .contenido{
         text-align: center;
+        width: 100%;
+        margin: 0px;
       }
       .segunda ul,.tercera ul,.cuarta ul{
         padding-left: 10px;
@@ -69,17 +77,23 @@ header{
       .servicios2 img{
         width: 70%;
         height: 230px;
+
       }
       .servicios2, .servicios1{
         margin-top: 3%;
+      }
+      .servicios1{
+        height: 230px;
       }
     .servicios{
       margin-top: 30px;
       padding: 4%;
     }
-    .servicios1>p{
+    .efecto{
+      display: none;
+    }
+    .servicios1:hover .efecto{
       position: relative;
-      bottom: 28px;
       color:#ffff;
       background-color:#000;
       padding:2px 10px;
@@ -87,18 +101,20 @@ header{
       font-weight:bold;
       width: 70%;
       margin: auto;
-    }
-    .servicios1:hover img{
-      width: 75%;
-      height:250px;
-      opacity: 0.5;
+      height: 230px;
+      bottom: 230px;
+      display: block;
     }
     .fondo{
       width: 100%;
-      height: 500px;
-      margin-top: 72px;
+      padding: 0px;
+      margin-top: 120px;
       position: absolute;
       z-index: -1;
+    }
+    .fondo img{
+      width: 100%;
+      height: 500px;
     }
     .botones{
       margin-top: 250px;
@@ -138,8 +154,7 @@ header{
       position:absolute;
       z-index: 1;
       color: white;
-      margin-top: 120px;
-
+      margin-top: 180px;
     }
     .contacto h1{
       margin-bottom: 20px;
