--- a/css/CssJaviHtml.css
+++ b/css/CssJaviHtml.css
@@ -181,7 +181,15 @@
       width: 100%;
       height: 40%;
     }
+    .musica audio{
+      text-align: center;
+    }
     #ejRot{
       color:blue;
       text-decoration: underline;
+    }
+    .lenguajes{
+      text-align: center;
+      margin-top: 150px;
+      margin-bottom: 100px;
     }
